--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,3 +29,5 @@
     <script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/dark_mode.js' | relative_url }}"></script>
     {% endif %}
+
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="3fea496d-7602-414d-8082-58038428babb"></script>
